--- a/package.json
+++ b/package.json
@@ -9,7 +9,15 @@
   "dependencies": {
     "react": "16.3.1",
     "react-native": "0.55.4",
-    "react-navigation": "^2.0.4"
+    "react-native-deprecated-custom-components": "^0.1.2",
+    "react-native-orientation": "^3.1.3",
+    "react-native-scrollable-tab-view": "^0.8.0",
+    "react-native-video": "^3.2.0",
+    "react-navigation": "^2.12.1",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-jest": "23.0.1",
