--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-native-deprecated-custom-components": "^0.1.2",
     "react-native-orientation": "^3.1.3",
     "react-native-scrollable-tab-view": "^0.8.0",
+    "react-native-swiper": "^1.5.13",
     "react-native-video": "^3.2.0",
     "react-navigation": "^2.12.1",
     "react-redux": "^5.0.7",
