--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@material-ui/core": "^3.0.1",
     "react": "16.3.1",
     "react-native": "0.55.4",
     "react-native-deprecated-custom-components": "^0.1.2",
