--- a/package.json
+++ b/package.json
@@ -4,16 +4,27 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "react-devtools": "react-devtools"
   },
   "dependencies": {
-    "@material-ui/core": "^3.0.1",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^9.0.0",
+    "babel-loader": "^8.0.2",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "prop-types": "^15.6.2",
     "react": "16.3.1",
+    "react-dom": "^16.4.2",
     "react-native": "0.55.4",
     "react-native-deprecated-custom-components": "^0.1.2",
+    "react-native-material-design-styles": "^0.2.7",
+    "react-native-material-ui": "^1.30.1",
     "react-native-orientation": "^3.1.3",
     "react-native-scrollable-tab-view": "^0.8.0",
     "react-native-swiper": "^1.5.13",
+    "react-native-vector-icons": "^5.0.0",
     "react-native-video": "^3.2.0",
     "react-navigation": "^2.12.1",
     "react-redux": "^5.0.7",
@@ -24,7 +35,15 @@
   "devDependencies": {
     "babel-jest": "23.0.1",
     "babel-preset-react-native": "4.0.0",
+    "eslint": "4.19.1",
+    "eslint-config-airbnb": "17.0.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "6.0.2",
+    "eslint-plugin-prettier": "^2.6.1",
+    "eslint-plugin-react": "^7.1.0",
     "jest": "23.0.1",
+    "mockjs": "^1.0.1-beta3",
     "react-test-renderer": "16.3.1"
   },
   "jest": {
