--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-devtools": "react-devtools"
   },
   "dependencies": {
+    "autoresponsive-react-native": "^1.0.9",
     "babel-core": "^6.26.3",
     "babel-eslint": "^9.0.0",
     "babel-loader": "^8.0.2",
@@ -18,11 +19,8 @@
     "react": "16.3.1",
     "react-dom": "^16.4.2",
     "react-native": "0.55.4",
-    "react-native-deprecated-custom-components": "^0.1.2",
-    "react-native-material-design-styles": "^0.2.7",
+    "react-native-debugger": "^1.1.0",
     "react-native-material-ui": "^1.30.1",
-    "react-native-orientation": "^3.1.3",
-    "react-native-scrollable-tab-view": "^0.8.0",
     "react-native-swiper": "^1.5.13",
     "react-native-vector-icons": "^5.0.0",
     "react-native-video": "^3.2.0",
@@ -30,7 +28,8 @@
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "unsplash-js": "^4.8.0"
   },
   "devDependencies": {
     "babel-jest": "23.0.1",
